--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,15 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .container {
-    text-align: center;
+    max-width: 90%;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 10px;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -30,4 +32,45 @@ p {
     font-size: 1.5em;
     margin-top: 20px;
     font-weight: bold;
+}
+
+/* Медиазапросы для адаптивного дизайна */
+@media (max-width: 1200px) {
+    h1 {
+        font-size: 2em;
+    }
+
+    p, #countdown {
+        font-size: 1.1em;
+    }
+}
+
+@media (max-width: 992px) {
+    h1 {
+        font-size: 1.8em;
+    }
+
+    p, #countdown {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 1.6em;
+    }
+
+    p, #countdown {
+        font-size: 0.9em;
+    }
+}
+
+@media (max-width: 576px) {
+    h1 {
+        font-size: 1.4em;
+    }
+
+    p, #countdown {
+        font-size: 0.8em;
+    }
 }
